Revision history for {{$dist->name}}

{{$NEXT}}
 - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - develop: +4 ↑2 (suggests: ↑2)
 - test: +2 ↓1 (recommends: +1)

1.000000 2015-06-22T21:55:52Z 0c76760
 [00 Major]
 - Changes in this release may affect hand-operated downstream packagers.

 [01 Version Scheme Change]
 - Version scheme is shortening mantissa to 6 places for consistency.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129
 - This is the primary reason for the 1.x bump

 [Dependencies::Noteworthy]
 - Support level now set for perl 5.6

 [Dependencies::Stats]
 - Dependencies changed since 0.01100100, see misc/*.deps* for details
 - configure: +1 ↓1 (recommends: ↑1)
 - develop: +15 ↑3 -6 (recommends: +1, suggests: +2 -1)
 - runtime: ↓1 -1 (recommends: +1)
 - test: +2 -3 (recommends: ↑2 ↓1 -1)

0.01100100 2014-04-11T04:19:55Z
 [00 Major]
 - Toolkit switched to EUMM
 - cave check done in Makefile.PL
 - implement in Moo and Sub::Install instead of Moose

 [Dependencies::Stats]
 - Dependencies changed since 0.01000004, see misc/*.deps* for details
 - build: -1
 - configure: +2 -1 (recommends: +1)
 - develop: +43 -2 (recommends: -1, suggests: +1 -1)
 - runtime: +3 ↑1 -1
 - test: +4 ↓1 -2 (recommends: +4)

0.01000004 2013-05-10T08:23:28Z
 - Maintenance Release

 [Dependencies::Stats]
 - Dependencies changed since 0.01000003, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +6 (recommends: ↑1, suggests: ↑1)
 - runtime: +1
 - test: ↑1

 [Documentation]
 - Update copyright year
 - Reindent license
 - Update license contact address
 - add README.mkdn

 [Meta]
 - bugtracker to github issues.

 [Packaging]
 - use test_requires from MB 0.4004

0.01000003 2011-10-22T13:24:52Z
 - Maintenance Release

 [Dependencies::Stats]
 - Dependencies changed since 0.01000002, see misc/*.deps* for details