@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
  - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+ - Internals: stub methods not initialized until after the first instance ( to make ENV setup easier )
+ - Bugfix: Don't call ->make_immutable in Moo .. this inflates to Moose.
 
  [Dependencies::Stats]
  - Dependencies changed since 1.000000, see misc/*.deps* for details
